# biojson

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .plan.md  .vercelignore  CLAUDE.md  DEEPSEEK_V4_COMPATIBILITY.md  DEVELOPMENT.md  EVOMASTER_EVAL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING(1).md  clash_health_check.sh  eval_evomaster.py  eval_pipeline.py  export_interactions.py  git_分支合并教程.md  git_合并PR过程记录.md  move_extra_input_files.py  nutri_fields_v2.xlsx  package-lock.json  pyproject.toml  render_markdown_guide.md  requirements-all.txt  requirements.txt  review_pr.sh  test_citation_fix.py  test_deepseek_v4_compat.py  test_email.py  tmux使用方法.md  transfer-report.md  vercel-build.sh  vercel.json  改动.md  转录因子协同.md  项目文件.md
.claude/: settings.local.json
admin/: README.md  app.py  run.sh
api/: index.py
configs/: nutri_gene_prompt_v2.txt  nutri_gene_prompt_v4.txt  nutri_gene_schema_base_v2.json  nutri_gene_schema_v2.json  nutri_plant.json  nutri_plant.txt
data/: 34998383.json  35003177.json  35003178.json  35007450.json  35008600.json  35008941.json  35009006.json  35011624.json  35012508.json  35016104.json  35024520.json  35033858.json  35049071.json  35050042.json  35050466.json  35054782.json  35054806.json  35054868.json  35054940.json  35055085.json  35057736.json  35058943.json  35065373.json  35065609.json  35065618.json  35067297.json  35085861.json  35088230.json  35091196.json  35091839.json  35092312.json  35095953.json  35095957.json  35095969.json  35095981.json  35099557.json  35100988.json  35102557.json  35106849.json  35112729.json  (+63 more)
database/: schema.sql
extractor/: __init__.py  claude_code_tips.md  config.py  extract.py  pipeline.py  run.sh  text_utils.py  token_tracker.py  utils.py  verify.py
json/: MinerU_markdown_NBT-biosynthesis-Overexpression_of_petunia_chalcone_isomerase_in_tomato_results_in_fruit_containing_increased_levels_of_flavonols_2034201331278598144_nutri_plant_verified.json  MinerU_markdown_PIIS009286741731499X_2031567088198815744_nutri_plant.json  MinerU_markdown_mmc10_2031567061837611008_nutri_plant.json  MinerU_markdown_mmc3_2031567019886178304_nutri_plant.json  MinerU_markdown_mmc3_2031567019886178304_nutri_plant_verified.json  MinerU_markdown_plcell_v31_5_937_2031566954798968832_nutri_plant_verified.json  MinerU_markdown_s41586-022-04950-4_(1)_2031567254796566528_nutri_plant_verified.json  Mol_Plant_2017_Zhu_nutri_plant_verified.json  Mol_Plant_2020_Tohge_nutri_plant_verified.json  Nat_Biotechnol_2001_Muir_nutri_plant_verified.json  Nat_Biotechnol_2008_Butelli_nutri_plant_verified.json  Nat_Commun_2023_Wang_nutri_plant_verified.json  Plant_Biotechnol_J_2026_Yang_nutri_plant_verified.json  Plant_Cell_2011_Gou_nutri_plant_verified.json  full_nutri_plant_verified.json  new_nutri_plant_verified.json
logs/: eval-nutrimaster-full.pid
markdown_test/: README.md  convert.py  input.md  output.html
md/: MinerU_markdown_NC-biosynthesis-Insights_into_the_missing_apiosylation_step_in_ﬂavonoid_apiosides_biosynthesis_of_Leguminosae_plants_2034201393207504896.md  MinerU_markdown_tieman2017_2031567451551371264.md  full(3).md  full(6).md
rag/: .gitignore  ACCESS_INFO.md  CHUNKER_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  RAG_RETRIEVAL_IMPROVEMENTS.md  RAG_RETRIEVAL_ISSUES.md  README.md  UI_DEMO.md  _inspect_game8.py  build_index.py  config.py  data_loader.py  generator.py  main.py  online_search.py  overall_fix.md  personal_lib.py  pipeline.py  (+8 more)
(+9866 files in other folders)
